# generic-random

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  generic-random.cabal  stack.yaml
.github/workflows/: ci.yml
bench/: binaryTree.hs
examples/: BinaryTree.hs  aeson.hs  functions.hs  generic-random-examples.cabal  generic.hs  lambda.hs  positive-ints.hs  text.hs  tour.hs  tree.hs  xml.hs
src/Data/Random/: Generics.hs
src/Data/Random/Generics/: Internal.hs  QuickCheck.hs  Random.hs
src/Data/Random/Generics/Boltzmann/: Oracle.hs  PowerSeries.hs  Solver.hs  Types.hs
src/Data/Random/Generics/Internal/: Boltzmann.hs  Oracle.hs  Solver.hs  Types.hs
src/Generic/: Random.hs
src/Generic/Random/: Boltzmann.hs  Data.hs  DerivingVia.hs  Generic.hs  Tutorial.hs
src/Generic/Random/Internal/: BaseCase.hs  Common.hs  Data.hs  Generic.hs  Oracle.hs  Solver.hs  Types.hs
test/: Common.hs  Inspect.hs  Spec.hs  Unit.hs  coherence.hs  tree.hs
test/Inspect/: DerivingVia.hs
test/Test/: Stats.hs  Tree.hs
