name:                generic-random
version:             0.5.0.0
synopsis:            Generic random generators
description:         Please see the README.
homepage:            http://github.com/lysxia/generic-random
license:             MIT
license-file:        LICENSE
stability:           Experimental
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Generics, Testing
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

flag boltzmann
  Description:
    Dependency on boltzmann-samplers for backwards compatibility.
  Manual:  False
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Random.Generic
    Generic.Random.Internal.Generic
  build-depends:
    base >= 4.7 && < 4.10,
    QuickCheck
  if flag(boltzmann)
    exposed-modules:
      Generic.Random.Boltzmann
      Generic.Random.Data
    build-depends:
      boltzmann-samplers <= 0.2
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: https://github.com/lysxia/generic-random
