name:                generic-random
version:             1.3.0.0
synopsis:            Generic random generators
description:
    For more information
    .
    - "Generic.Random.Tutorial"
    .
    - http://blog.poisson.chat/posts/2018-01-05-generic-random-tour.html

homepage:            http://github.com/lysxia/generic-random
license:             MIT
license-file:        LICENSE
stability:           Experimental
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Generics, Testing
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.2.1, GHC == 8.4.1, GHC == 8.6.1

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Random
    Generic.Random.Internal.BaseCase
    Generic.Random.Internal.Generic
    Generic.Random.Tutorial
  build-depends:
    base >= 4.7 && < 5,
    QuickCheck
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: https://github.com/lysxia/generic-random

test-suite unit
  Hs-source-dirs:  test
  Main-is:         Unit.hs
  Build-depends:
      base,
      deepseq,
      QuickCheck,
      generic-random
  Type: exitcode-stdio-1.0
  Default-language: Haskell2010
