name: generic-random-examples
version: 0
build-type: Simple
cabal-version: >=1.10

executable generic-example
  main-is: generic.hs
  ghc-options: -Wall
  if impl(ghc < 7.10)
    ghc-options: -fcontext-stack=30
  build-depends:
    base,
    QuickCheck,
    generic-random
  default-language: Haskell2010

executable text-example
  main-is: text.hs
  ghc-options: -Wall -Wno-orphans -Wno-unused-top-binds
  if impl(ghc < 7.10)
    ghc-options: -fcontext-stack=30
  build-depends:
    base,
    QuickCheck,
    text,
    generic-random
  default-language: Haskell2010

executable tour-example
  main-is: tour.hs
  ghc-options: -Wall -Wno-orphans -Wno-unused-imports
  if impl(ghc < 7.10)
    ghc-options: -fcontext-stack=30
  build-depends:
    base,
    QuickCheck,
    text,
    generic-random
  default-language: Haskell2010

executable tour-bench
  main-is: tour.hs
  ghc-options: -O2
  ghc-options: -ddump-simpl -dsuppress-all -dno-suppress-module-prefixes
  cpp-options: -DBENCHMODE
  build-depends:
    base,
    QuickCheck,
    text,
    generic-random
  default-language: Haskell2010
